# openapi.yaml
@@ -1,15 +1,31 @@
 openapi: 3.0.1
 info:
   description: API of EtuEDT-Back server.
-  version: 2.0.1
+  version: 3.0.0
   title: EtuEDT-Back
 servers:
-  - url: https://edtapi.antoninhuaut.fr/v2
+  - url: https://edtapi.antoninhuaut.fr/v3
 paths:
   /:
     get:
       tags:
-        - timetable
+        - general
+      summary: Get the base routes
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  path:
+                    type: string
+                    example: v3
+  /univ:
+    get:
+      tags:
+        - university
       summary: Get the list of universities
       responses:
         '200':
@@ -20,15 +36,69 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/University'
-  /{numUniv}:
+  /univ/{univId}:
     get:
       tags:
-        - timetable
-      summary: Get a list of the university's timetables
+        - university
+      summary: Get university detail
       parameters:
-        - name: numUniv
+        - name: univId
           in: path
           description: Id of university
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/University'
+        '404':
+          description: University not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /univ/{univId}/groups:
+    get:
+      tags:
+        - group
+      summary: Get the list of groups for a university
+      parameters:
+        - name: univId
+          in: path
+          description: Id of university
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Group'
+        '404':
+          description: University not found
+  /univ/{univId}/groups/{groupId}:
+    get:
+      tags:
+        - group
+      summary: Get the list of timetables in a group
+      parameters:
+        - name: univId
+          in: path
+          description: Id of university
+          required: true
+          schema:
+            type: integer
+        - name: groupId
+          in: path
+          description: Id of group
           required: true
           schema:
             type: integer
@@ -42,26 +112,28 @@ paths:
                 items:
                   $ref: '#/components/schemas/Timetable'
         '404':
-          description: Invalid parameters
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /{numUniv}/{adeResources}:
+          description: University or group not found
+  /univ/{univId}/groups/{groupId}/{adeResources}:
     get:
       tags:
         - timetable
-      summary: Get timetable details by numUniv and adeResources
+      summary: Get timetable metadata
       parameters:
-        - name: numUniv
+        - name: univId
           in: path
           description: Id of university
           required: true
           schema:
             type: integer
+        - name: groupId
+          in: path
+          description: Id of group
+          required: true
+          schema:
+            type: integer
         - name: adeResources
           in: path
-          description: Id of timetable
+          description: ADE resources ID
           required: true
           schema:
             type: integer
@@ -73,38 +145,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/Timetable'
         '404':
-          description: Invalid parameters
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /{numUniv}/{adeResources}/{format}:
+          description: Timetable not found
+  /univ/{univId}/groups/{groupId}/{adeResources}/events:
     get:
       tags:
         - timetable
-      summary: Get timetable content by numUniv, adeResources and by format
+      summary: Get timetable events
       parameters:
-        - name: numUniv
+        - name: univId
           in: path
           description: Id of university
           required: true
           schema:
             type: integer
-        - name: adeResources
+        - name: groupId
           in: path
-          description: Id of timetable
+          description: Id of group
           required: true
           schema:
             type: integer
-        - name: format
+        - name: adeResources
           in: path
-          description: Format to return
+          description: ADE resources ID
           required: true
           schema:
-            type: string
-            enum:
-              - ics
-              - json
+            type: integer
       responses:
         '200':
           description: Successful operation
@@ -117,8 +182,94 @@ paths:
             text/calendar:
               schema:
                 $ref: '#/components/schemas/IcalEvent'
+        '503':
+          description: No cache found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /univ/{univId}/rooms:
+    get:
+      tags:
+        - room
+      summary: Get the list of rooms for a university
+      parameters:
+        - name: univId
+          in: path
+          description: Id of university
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Room'
         '404':
-          description: Invalid parameters
+          description: University not found
+  /univ/{univId}/rooms/{adeResources}:
+    get:
+      tags:
+        - room
+      summary: Get room metadata
+      parameters:
+        - name: univId
+          in: path
+          description: Id of university
+          required: true
+          schema:
+            type: integer
+        - name: adeResources
+          in: path
+          description: ADE resources ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Room'
+        '404':
+          description: Room not found
+  /univ/{univId}/rooms/{adeResources}/events:
+    get:
+      tags:
+        - room
+      summary: Get room events
+      parameters:
+        - name: univId
+          in: path
+          description: Id of university
+          required: true
+          schema:
+            type: integer
+        - name: adeResources
+          in: path
+          description: ADE resources ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/JsonEvent'
+            text/calendar:
+              schema:
+                $ref: '#/components/schemas/IcalEvent'
+        '503':
+          description: No cache found
           content:
             application/json:
               schema:
@@ -128,36 +279,60 @@ components:
     University:
       type: object
       properties:
-        numUniv:
+        id:
           type: integer
           example: 1
-        nameUniv:
+        name:
           type: string
           example: Université de Caen
-        adeUniv:
+        adeUrl:
           type: string
-          example: http://ade.unicaen.fr
+          example: https://ade.unicaen.fr/jsp/custom/modules/plannings/anonymous_cal.jsp
+    Group:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: BUT Informatique - 1ère année
     Timetable:
       type: object
       properties:
-        numUniv:
-          type: integer
-          example: 1
-        nameUniv:
-          type: string
-          example: Université de Caen
-        numYearTT:
-          type: integer
-          example: 1
-        descTT:
-          type: string
-          example: TP 1.1
         adeResources:
           type: integer
           example: 1177
         adeProjectId:
           type: integer
-          example: 4
+          example: 2
+        year:
+          type: integer
+          example: 1
+        label:
+          type: string
+          example: TP 1.1
+        adeUrl:
+          type: string
+          example: https://ade.unicaen.fr/...
+        lastUpdate:
+          type: string
+          example: '2020-06-16T07:14:34.017Z'
+    Room:
+      type: object
+      properties:
+        adeResources:
+          type: integer
+          example: 42349
+        adeProjectId:
+          type: integer
+          example: 2
+        label:
+          type: string
+          example: AC 007 (A)
+        adeUrl:
+          type: string
+          example: https://ade.unicaen.fr/...
         lastUpdate:
           type: string
           example: '2020-06-16T07:14:34.017Z'
@@ -166,7 +341,7 @@ components:
       properties:
         error:
           type: string
-          example: no cache found for this timetable
+          example: no cache found for this resource, try again later
     JsonEvent:
       type: object
       properties:
